leselys/static/css/leselys.css
.sidenav-affix {
    width: 13%;
  }
body {
  padding-top: 15px;
  padding-bottom: 40px;
  margin-left: -8px;
}
li {
  font-size:13px;
}

ul#menu {
  margin-bottom: 10px;
}

li#icons a {
  text-decoration: none;
}

li a [class^="icon-"] {
  color: #222222 ;
}

#login-background {
  padding-top: 40px;
  padding-bottom: 40px;
  background-color: #f5f5f5;
}

      .form-signin {
        max-width: 300px;
        padding: 19px 29px 29px;
        margin: 0 auto 20px;
        background-color: #fff;
        border: 1px solid #e5e5e5;
        -webkit-border-radius: 5px;
           -moz-border-radius: 5px;
                border-radius: 5px;
        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
                box-shadow: 0 1px 2px rgba(0,0,0,.05);
      }
      .form-signin .form-signin-heading,
      .form-signin .checkbox {
        margin-bottom: 10px;
      }
      .form-signin input[type="text"],
      .form-signin input[type="password"] {
        font-size: 16px;
        height: auto;
        margin-bottom: 15px;
        padding: 7px 9px;
}
@media handheld, only screen and (max-width: 900px) {
  .sidenav-affix {
    width: 12%;
  }
}
@media handheld, only screen and (max-width: 768px) {
  .sidenav-affix {
    position: static;
    width: auto;
  }
  li a [class^="icon-"] {
    font-size: 2em;
  }
  li#listSubscriptions {
    font-size: 14px;
  }
  li.story {
    font-size: 16px;
    padding: 3px 0px;
  }
  #content .welcome {
    display: none;
  }
}

